--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/build/gltf-renderer.esm.js"></script>
     <script nomodule src="/build/gltf-renderer.js"></script>
   </head>
-  <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <body style="width: 100vw; height: 100vh;">
+    <gltf-renderer></gltf-renderer>
   </body>
 </html>
